--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -287,7 +287,7 @@
 
                           <article class="col-md-6 personal all">
                               <a href="/template/professional-service-site-ztyr7k">
-                                  <div class="card mb-4" style="background-image: url('https:lh3.googleusercontent.com/UuKW2G4xc1CiN9HIC6pwRYzor1mE0Xi91-s_kDGmm95QgATyLcqS9a23ODcHXHQEgfBthvkNgVmC9OvU7r2jJggiOF4=s640');"></div>
+                                  <div class="card mb-4" style="background-image: url('https://lh3.googleusercontent.com/UuKW2G4xc1CiN9HIC6pwRYzor1mE0Xi91-s_kDGmm95QgATyLcqS9a23ODcHXHQEgfBthvkNgVmC9OvU7r2jJggiOF4=s640');"></div>
                               </a>
                               <h5 style="margin-bottom:0px"><a href="/template/professional-service-site-ztyr7k">professional service</a></h5>
                           </article>
