--- a/views/index.mustache
+++ b/views/index.mustache
@@ -192,7 +192,7 @@
                 <div class="row mt-4">
                   <div class="col-md-8 mx-auto text-center">
                     <iframe width="100%" height="400" src="https://www.youtube.com/embed/1NY1rqokhLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <a href="/templates" class="btn btn-primary btn-lg page-scroll btn-get-started bg-green mt-4">Get Started</a>
+                    <a href="/templates" class="btn btn-primary btn-lg page-scroll btn-get-started bg-green mt-4">View Templates</a>
               		</div>
               	</div>
 
