--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -9,7 +9,7 @@
 				<span data-feather="grid"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav ml-auto">
+				<ul class="navbar-nav ml-auto" style="background:#fff">
 						<li class="nav-item">
 								<a class="nav-link" href="/">Home</a>
 						</li>
