import referrer script

--- a/views/partials/scripts.mustache
+++ b/views/partials/scripts.mustache
@@ -72,4 +72,5 @@
 <script src="{{{cdn}}}/snap/js/slick.min.js"></script>
 <script src="{{{cdn}}}/snap/js/scripts.js"></script>
 <script src="{{{cdn}}}/scripts/auth.js"></script>
+<script src="{{{cdn}}}/scripts/referrer.js"></script>
 {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
