--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -72,7 +72,7 @@
                           <h3 style="font-weight:400">{{title}}</h3>
                         </a>
                         <div style="display:flex" class="mb-5">
-                          <div style="flex:1">
+                          <div style="flex:1;padding-right:6px">
                             <p class="mb-1"><a style="box-shadow:none;color:#777" href="/post/{{slug}}">{{preview}}</a></p>
                             <img class="icon-avatar" src="{{{author.image}}}=s24-c" />
                             <small>{{author.username}}</small>
