side bar on blog page

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -89,7 +89,21 @@
                     </div>
 
                     <div class="col-md-4 col-lg-4">
+                      <div style="background:#fff;padding:16px">
+                        <h4 style="font-weight:400">Build Your Website</h4>
+                        <hr />
+                        <a href="/templates">
+                          <img style="max-width:100%" src="https://lh3.googleusercontent.com/WfG4FNM7pFvI4HPJON9wT-Uh6sqM_4uusRKc2AJuHddEaEsKckdE2tSlwYgkC8P2dNnY_yUe0dexShUVLOYpy35wFv0=s512" />
+                        </a>
+                        <p class="mt-3">
+                          Vertex 360 is the easiest way to build a professional website with no coding
+                          skill necessary. Simply choose a template, enter your content and that's it.
+                          Click the button below to get started.
+                        </p>
+                        <a style="background:#56b48c;border-color:#56b48c;width:100%;border-radius:4px" class="btn btn-lg btn-primary" href="">Get Started</a>
 
+
+                      </div>
                     </div>
                 </div>
 
