link to templates

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -100,7 +100,7 @@
                           skill necessary. Simply choose a template, enter your content and that's it.
                           Click the button below to get started.
                         </p>
-                        <a style="background:#56b48c;border-color:#56b48c;width:100%;border-radius:4px" class="btn btn-lg btn-primary" href="">Get Started</a>
+                        <a style="background:#56b48c;border-color:#56b48c;width:100%;border-radius:4px" class="btn btn-lg btn-primary" href="/templates">Get Started</a>
 
 
                       </div>
