--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -55,6 +55,21 @@
       .author-container h3 {
         text-transform: capitalize;
       }
+
+      .sidebar-box {
+        background: #fff;
+        padding: 16px;
+        position: fixed;
+        max-width: 350px
+      }
+
+      .sidebar-box h4 {
+        font-weight:400
+      }
+
+      .sidebar-box img {
+        max-width:100%
+      }
 		</style>
 </head>
     <body>
@@ -89,11 +104,11 @@
                     </div>
 
                     <div class="col-md-4 col-lg-4">
-                      <div style="background:#fff;padding:16px">
-                        <h4 style="font-weight:400">Build Your Website</h4>
+                      <div class="sidebar-box">
+                        <h4>Build Your Website</h4>
                         <hr />
                         <a href="/templates">
-                          <img style="max-width:100%" src="https://lh3.googleusercontent.com/WfG4FNM7pFvI4HPJON9wT-Uh6sqM_4uusRKc2AJuHddEaEsKckdE2tSlwYgkC8P2dNnY_yUe0dexShUVLOYpy35wFv0=s512" />
+                          <img src="https://lh3.googleusercontent.com/WfG4FNM7pFvI4HPJON9wT-Uh6sqM_4uusRKc2AJuHddEaEsKckdE2tSlwYgkC8P2dNnY_yUe0dexShUVLOYpy35wFv0=s512" />
                         </a>
                         <p class="mt-3">
                           Vertex 360 is the easiest way to build a professional website with no coding
@@ -101,8 +116,6 @@
                           Click the button below to get started.
                         </p>
                         <a style="background:#56b48c;border-color:#56b48c;width:100%;border-radius:4px" class="btn btn-lg btn-primary" href="/templates">Get Started</a>
-
-
                       </div>
                     </div>
                 </div>
