--- a/views/template.mustache
+++ b/views/template.mustache
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Vertex 360 | {{template.name}}" />
   	<meta property="og:type" content="article" />
   	<meta property="og:url" content="https://www.vertex360.co/template/{{template.slug}}" />
-  	<meta property="og:image" content="{{{template.image}}}=s260-c" />
+  	<meta property="og:image" content="{{{template.image}}}=s512" />
   	<meta property="og:image:width" content="260px" />
   	<meta property="og:image:height" content="260px" />
   	<meta property="og:description" content="{{template.preview}}" />
