smaller header font size

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto">
                         <div class="template-header">
-                          <h1>{{template.name}}</h1>
+                          <h1 style="font-size:2.0rem">{{template.name}}</h1>
                           <img class="icon-avatar" src="{{{template.profile.image}}}=s34-c" />
                           <small>{{template.profile.username}}</small>
                           <span style="margin:16px">&bull;</span>
