updated categories to match those from templates

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -198,10 +198,10 @@
                       <a href="#" class="sidebar-link" data-rel="landing">Landing</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="personal">Personal</a>
+                      <a href="#" class="sidebar-link" data-rel="resume">Resume</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="business">Business</a>
+                      <a href="#" class="sidebar-link" data-rel="agency">Business</a>
                   </li>
                   <li>
                       <a href="#" class="sidebar-link" data-rel="performer">Performer</a>
@@ -222,7 +222,7 @@
                               <h5 style="margin-bottom:0px"><a href="/template/mixtape-1qhwa4">Mixtape</a></h5>
                           </article>
 
-                          <article class="col-md-6 business all">
+                          <article class="col-md-6 agency all">
                               <a href="/template/digital-gzmvir">
                                   <div class="card mb-4" style="background-image: url('https://lh3.googleusercontent.com/7DjKSIegqinAz3cF1JoiFg7PmXUnDL1CI3BHzwZbD3-rsogRGQemDVn72CBorMpDl_MzZqND2fMR2nX6fNUteqPppg=s2040');"></div>
                               </a>
@@ -264,28 +264,28 @@
                               <h5 style="margin-bottom:0px"><a href="/template/rocket-man-9gnjll">Rocket Man</a></h5>
                           </article>
 
-                          <article class="col-md-6 personal all">
+                          <article class="col-md-6 resume all">
                               <a href="/template/resume-site-2-th0kli">
                                   <div class="card mb-4" style="background-image: url('https://lh3.googleusercontent.com/Hr25YiJpSzE2IhIs86EUe0pVG4GO8E2Du6BI6HBB_LZPYU-Hfpdd7DZUIVSYW7Jj5sUc00M8ipXs-yDgLC6xyr0BCg=s2040');"></div>
                               </a>
                               <h5 style="margin-bottom:0px"><a href="/template/resume-site-2-th0kli">one page resume</a></h5>
                           </article>
 
-                          <article class="col-md-6 business all">
+                          <article class="col-md-6 agency all">
                               <a href="/template/delta-yqgzoh">
                                   <div class="card mb-4" style="background-image: url('https://lh3.googleusercontent.com/v7gIiguYRjCLEp1N3cBkqhZTcB_gztBhVoaHgljRLEVqNLxZcUjXYwXOuE6pFW0yd4HzVIu1JyDc9YVnMoC5oSAOeg=s2040');"></div>
                               </a>
                               <h5 style="margin-bottom:0px"><a href="/template/delta-yqgzoh">Delta</a></h5>
                           </article>
 
-                          <article class="col-md-6 personal all">
+                          <article class="col-md-6 resume all">
                               <a href="/template/resume-website-4cpswl">
                                   <div class="card mb-4" style="background-image: url('https://lh3.googleusercontent.com/twep9CWJLLaIY-E4NOY3rw5xBCwntN6p0tz5wjdBqy-biBZzExkOT1-mGIqrU1riWXcZYMJ4wFsfhYSDdyqpt1kn=s2040');"></div>
                               </a>
                               <h5 style="margin-bottom:0px"><a href="/template/resume-website-4cpswl">resume template</a></h5>
                           </article>
 
-                          <article class="col-md-6 personal all">
+                          <article class="col-md-6 agency all">
                               <a href="/template/professional-service-site-ztyr7k">
                                   <div class="card mb-4" style="background-image: url('https://lh3.googleusercontent.com/UuKW2G4xc1CiN9HIC6pwRYzor1mE0Xi91-s_kDGmm95QgATyLcqS9a23ODcHXHQEgfBthvkNgVmC9OvU7r2jJggiOF4=s640');"></div>
                               </a>
