blog page layout

--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -87,10 +87,10 @@
       {{>nav}}
 
         <!-- features section -->
-        <section class="py-6" id="features" style="background:#f9f9f9">
-            <div class="container mt-4">
+        <section id="features" style="background:#f9f9f9">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-lg-8">
+                    <div class="col-md-8 col-lg-8 content-main">
                       {{#posts}}
                       <div>
                         <small style="color:#777">{{dateString}}</small>
