--- a/views/partials/register.mustache
+++ b/views/partials/register.mustache
@@ -27,6 +27,11 @@
                               <input id="input-register-password" type="password"  class="form-control" placeholder="Password">
                             </div>
                         </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                              <input id="input-register-promo" type="text"  class="form-control" placeholder="Promo Code">
+                            </div>
+                        </div>
                     </div>
                     <div class="text-center mt-3">
                         <button id="input-register" class="btn btn-primary mb-4">SIGN UP</button><br />
