--- a/views/index.mustache
+++ b/views/index.mustache
@@ -229,7 +229,7 @@
                     <div class="col-md-6 my-md-auto">
                         <h1>Fully Featured</h1>
                         <p class="text-muted lead">
-                            Our simplicty doesn't come at the expense of features. Every Vertex 360 site comes equipped with a full content management system (for blogs, newsletter subscribers, etc), SSL integration, mobile responsiveness, and more.
+                            Our simplicity doesn't come at the expense of features. Every Vertex 360 site comes equipped with a full content management system (for blogs, newsletter subscribers, etc), SSL integration, mobile responsiveness, and more.
                         </p>
                         <a href="#" class="btn btn-primary bg-green">Learn more</a>
                     </div>
@@ -526,6 +526,6 @@
             a.getElementsByTagName('head')[0].appendChild(r);
           }(document, 'https://s3.amazonaws.com/pulsemetrics/pulse-metrics.js', "GPHIb2B5kHj6aRe7jdgmx5EfxwDr6o0fKSIpASFAu76aRaVecj", 'vertex'));
         </script>
-        
+
     </body>
 </html>
