per site per month

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -338,7 +338,7 @@
                                       <li>Built-in CMS</li>
                                       <li><strike>Automatic SSL</strike></li>
                                       <li><strike>Custom Domain</strike></li>
-                                      <li>$5 per Additional Site</li>
+                                      <li>$5 per Additional Site per Month</li>
                                     </ul>
                                   </div>
                               </div>
@@ -356,7 +356,7 @@
                                         <li>Built-in CMS</li>
                                         <li>Automatic SSL</li>
                                         <li>Custom Domain</li>
-                                        <li>$5 per Additional Site</li>
+                                        <li>$5 per Additional Site per Month</li>
                                       </ul>
                                     </div>
                                 </div>
