capitalize template names

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -178,6 +178,10 @@
           padding: 12px 5.5em;
         }
       }
+
+      h5 {
+        text-transform: capitalize;
+      }
 		</style>
 </head>
     <body>
