cropped image on template previews

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -222,7 +222,7 @@
                         {{#templates}}
                         <article class="col-md-6 {{template.category}} all">
                             <a href="/template/{{slug}}">
-                                <div class="card mb-4" style="background-image: url('{{{image}}}=s2040');"></div>
+                                <div class="card mb-4" style="background-image: url('{{{image}}}=s2048-c');"></div>
                             </a>
                             <h5 style="margin-bottom:0px"><a href="/template/{{slug}}">{{name}}</a></h5>
                         </article>
