--- a/views/template.mustache
+++ b/views/template.mustache
@@ -90,6 +90,9 @@
                     <div class="col-md-10 col-lg-8 mx-auto">
                         <div class="template-header">
                           <h1 style="font-size:2.0rem">{{template.name}}</h1>
+                          <a style="float:right" href="#" data-toggle="modal" data-target="#launch-template-modal" class="btn btn-primary d-inline-flex flex-row align-items-center text-white bg-green">
+                              Launch This Template
+                          </a>
                           <img class="icon-avatar" src="{{{template.profile.image}}}=s34-c" />
                           <small>{{template.profile.username}}</small>
                           <span style="margin:16px">&bull;</span>
@@ -103,7 +106,7 @@
                             <img class="screenshot" src="{{{.}}}=s512" />
                           </a>
                           {{/template.images}}
-                          
+
                           {{#template.hasVideo}}
                           <iframe width="100%" height="400" src="https://www.youtube.com/embed/{{template.template.video}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           {{/template.hasVideo}}
