add portfolio template option

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -205,6 +205,9 @@
                       <a href="#" class="sidebar-link" data-rel="resume">Resume</a>
                   </li>
                   <li>
+                      <a href="#" class="sidebar-link" data-rel="portfolio">Portfolio</a>
+                  </li>
+                  <li>
                       <a href="#" class="sidebar-link" data-rel="agency">Business</a>
                   </li>
                   <li>
