agency not business

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -208,7 +208,7 @@
                       <a href="#" class="sidebar-link" data-rel="portfolio">Portfolio</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="agency">Business</a>
+                      <a href="#" class="sidebar-link" data-rel="agency">Agency</a>
                   </li>
                   <li>
                       <a href="#" class="sidebar-link" data-rel="performer">Performer</a>
