--- a/views/account.mustache
+++ b/views/account.mustache
@@ -62,9 +62,9 @@
           <div class="header-widget hidden-xs hidden-sm">
             <nav id="navigation" class="style-1">
     					<ul id="responsive">
+                <li><a href="/">Home</a></li>
                 <li><a href="/templates">Templates</a></li>
-                <li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
-                <li><a href="/community">Community</a></li>
+                <li><a href="/blog">Blog</a></li>
   							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
     					</ul>
     				</nav>
