dark footer partial

--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -1,43 +1,29 @@
-<div id="footer" class="footer-dark margin-top-80">
-	<div class="container">
-		<div class="row padding-bottom-40">
-			<div class="col-md-5 col-sm-12">
-				<img class="footer-logo" src="https://lh3.googleusercontent.com/LARXvti0sZzR_lskYdL2sIZnIFaAMDu5KyyoZQCrRbFhVIHfno2OBNouNnEMkfnbqEYECqGfWzIFS6yGDZA8sBbw3g=s140" alt="Vertex 360">
-				<br><br>
-				<p>
-					Vertex 360 is a cloud-based development platform that makes it easy to create beautiful, professional websites. Promote your business, work, or just test out new ideas. Vertex 360 has everything you need to create a customized, high-quality free website.
-				</p>
-			</div>
-
-			<div class="col-md-2 col-sm-12 col-xs-12 col-md-offset-1">
-				<ul class="footer-links margin-top-30" style="width:100%">
-					<li><a href="/?selected=faq">FAQ</a></li>
-					<li><a href="/templates">Templates</a></li>
-					<li><a href="/community">Community</a></li>
-					<li><a href="#">Terms of Use</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<h3 class="margin-top-30" style="color:#fff">Newsletter</h3>
-				<form id="add-comment" class="add-comment">
-	        <div class="input-row margin-left-0">
-	          <div class="input-container margin-left-0">
-	            <input placeholder="Email" id="input-newsletter-email" type="text" />
-	          </div>
-	        </div>
-
-	        <div style="text-align:right">
-	          <button id="btn-newsletter-subscribe" class="button">Sign Up!</button>
-	        </div>
-	        <div class="clearfix"></div>
-	      </form>
-				<div class="clearfix"></div>
-			</div>
+<footer class="py-6 bg-dark mt-0">
+		<div class="container">
+				<div class="row">
+						<div class="col-md-6 mx-auto text-center">
+								<ul class="list-inline">
+										<li class="list-inline-item"><a style="color:#fff" href="/">Home</a></li>
+										<li class="list-inline-item"><a style="color:#fff" href="/templates">Templates</a></li>
+										<li class="list-inline-item"><a style="color:#fff" href="/blog">Blog</a></li>
+								</ul>
+								<ul class="list-inline social social-dark social-sm">
+										<li class="list-inline-item">
+												<a style="background:#777" href="#"><i class="fa fa-facebook"></i></a>
+										</li>
+										<li class="list-inline-item">
+												<a style="background:#777" target="_blank" href="https://twitter.com/Vertex3601"><i class="fa fa-twitter"></i></a>
+										</li>
+										<li class="list-inline-item">
+												<a style="background:#777" target="_blank" href="https://www.youtube.com/channel/UCsJemLfEW2fMTw1y-IGbCdA/videos"><i class="fa fa-youtube"></i></a>
+										</li>
+								</ul>
+						</div>
+				</div>
+				<div class="row mt-5">
+						<div class="col-12 text-muted text-center small-xl">
+								&copy; 2019 Vertex 360 - All Rights Reserved
+						</div>
+				</div>
 		</div>
-
-		<div class="row">{{>copyright}}</div>
-	</div>
-</div>
+</footer>
