hide bio section

--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -220,7 +220,7 @@
                         </article>
                         {{/sites}}
 
-                        <article class="col-md-10 offset-md-1 bio">
+                        <article style="display:none" class="col-md-10 offset-md-1 bio">
                             <a href="/template/{{slug}}">
                                 <div class="card mb-4" style="background-image: url('{{{image}}}=s1024');"></div>
                             </a>
