--- a/views/blog.mustache
+++ b/views/blog.mustache
@@ -99,7 +99,7 @@
                         </a>
                         <div style="display:flex" class="mb-5">
                           <div style="flex:4;padding-right:6px">
-                            <p class="mb-1"><a style="box-shadow:none;color:#777" href="/post/{{slug}}">{{preview}}</a></p>
+                            <p style="line-height:1.9" class="mb-1"><a style="box-shadow:none;color:#777" href="/post/{{slug}}">{{preview}}</a></p>
                             <img class="icon-avatar" src="{{{author.image}}}=s24-c" />
                             <small>{{author.username}}</small>
                           </div>
