--- a/views/admin/pages.mustache
+++ b/views/admin/pages.mustache
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/css/style.min.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
-
   <style>
     input {
       box-shadow: none !important;
@@ -50,9 +49,8 @@
 
   <script type="text/javascript">window.__PRELOADED_STATE__ = {{{pageConfig}}}</script>
   <script type="text/javascript" src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/js/vendor.min.js"></script>
-  <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/common.js"></script>
-	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/site.js"></script>
+	<script type="text/javascript" src="https://cdn.turbo360-dev.com/admin/pages.js"></script>
 </body>
 
 </html>
