--- a/views/admin/pages.mustache
+++ b/views/admin/pages.mustache
@@ -41,6 +41,15 @@
     .checkbox input {
       height: 20px !important;
     }
+
+    .dashboard-nav {
+      min-width: 360px;
+      max-width: 360px;
+    }
+
+    .dashboard-content {
+      margin-left: 360px;
+    }
   </style>
 </head>
 
