--- a/views/admin/pages.mustache
+++ b/views/admin/pages.mustache
@@ -41,6 +41,16 @@
     .checkbox input {
       height: 20px !important;
     }
+
+    iframe {
+      -ms-zoom: 0.8;
+      -moz-transform: scale(0.8);
+      -moz-transform-origin: 0px 0;
+      -o-transform: scale(0.8);
+      -o-transform-origin: 0 0;
+      -webkit-transform: scale(0.8);
+      -webkit-transform-origin: 0 0;
+    }
   </style>
 </head>
 
