--- a/medium/index.mustache
+++ b/medium/index.mustache
@@ -12,9 +12,14 @@
 		<div class="pl-4 pr-4 h-100 tofront">
 			<div class="row justify-content-between">
 				<div class="col-md-12 pt-4 pb-5 align-self-center">
-					<h1 class="secondfont mb-3 font-weight-bold">Mundana is an HTML Bootstrap Template for Professional Blogging</h1>
-					<p class="mb-3">
-						Beautifully crafted with the latest technologies, SASS & Bootstrap 4.1.3, Mundana is the perfect design for your professional blog. Homepage, post article and category layouts available.
+					<h1 class="secondfont mb-3 font-weight-bold">
+            Own Your Brand.
+          </h1>
+					<p class="mb-3 lead">
+            Vertex 360 is a platform for content creators in the modern media age.
+            Whether you manage a YouTube channel, podcast, blog, Instagram folowing,
+            or all of the above, Vertex 360 provides the best way to deliver your
+            content under a unified, coherent brand that you control.
 					</p>
 					<a href="/about" class="btn btn-danger">Learn More</a>
 				</div>
