--- a/medium/partials/nav.mustache
+++ b/medium/partials/nav.mustache
@@ -1,28 +1,30 @@
 <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
 <div class="container">
-	<a class="navbar-brand" href="/"><img style="max-width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" /></a>
+	<a class="navbar-brand" href="/">
+		<img style="max-width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+	</a>
 	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="navbar-collapse collapse" id="navbarColor02" style="">
 		<ul class="navbar-nav ml-auto d-flex align-items-center">
 			<li class="nav-item">
-				<a class="nav-link" href="./article.html">Culture</a>
+				<a class="nav-link" href="/posts?category=culture">Culture</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./article.html">Fashion</a>
+				<a class="nav-link" href="/posts?category=fashion">Fashion</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./article.html">Tech</a>
+				<a class="nav-link" href="/posts?category=tech">Tech</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./article.html">Politics</a>
+				<a class="nav-link" href="/posts?category=politics">Politics</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./about.html">About</a>
+				<a class="nav-link" href="/about">About</a>
 			</li>
 			<li class="nav-item highlight ml-4">
-				<a style="background:#03a87c;color:#fff !important" class="nav-link" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">JOIN VERTEX</a>
+				<a style="background:#03a87c;color:#fff !important" class="nav-link" href="#">JOIN VERTEX</a>
 			</li>
 		</ul>
 	</div>
