--- a/medium/article.mustache
+++ b/medium/article.mustache
@@ -10,7 +10,7 @@
 
 <div class="container">
 	<div class="row justify-content-between">
-		<div class="col-md-12 col-lg-8 offset-lg-3 pt-6 pb-3 pr-6 align-self-center">
+		<div class="col-md-12 col-lg-8 offset-lg-2 pt-6 pb-3 pr-6 align-self-center">
 			<p class="text-uppercase font-weight-bold">
 				<a class="text-danger" href="#">Stories</a>
 			</p>
@@ -19,14 +19,14 @@
 				 Analysts told CNBC that the currency could hit anywhere between $1.35-$1.40 if the deal gets passed through the U.K. parliament.
 			</p>
 			<div class="d-flex align-items-center">
-				<img class="rounded-circle" src="assets/img/demo/avatar2.jpg" width="70">
+				<img class="rounded-circle" src="{{{post.author.image}}}=s72-c" width="36">
 				<small class="ml-2 text-capitalize">{{post.author.firstName}} {{post.author.lastName}}<span class="text-muted d-block">{{post.dateString}} &middot; 5 min. read</span>
 				</small>
 			</div>
 		</div>
 	</div>
   <div class="row justify-content-between">
-    <div class="col-md-12 col-lg-8 offset-lg-3 pt-0 pb-4 pr-6 align-self-center">
+    <div class="col-md-12 col-lg-8 offset-lg-2 pt-0 pb-4 pr-6 align-self-center">
       <img src="{{{post.image}}}=s750" />
     </div>
   </div>
@@ -34,7 +34,7 @@
 <!-- End Header -->
 
 <div class="container pt-4 pb-4">
-	<div class="row justify-content-center">
+	<div class="row">
 		<div class="col-lg-2 pr-4 mb-4 col-md-12">
 			<div class="sticky-top text-center">
 				<div class="text-muted">
